Update currency_fetcher_build.yaml for Azure Pipelines

--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -9,9 +9,9 @@ variables:
     REGISTRYֹֹֹֹֹֹֹֹֹֹֹֹֹ_NAME: $(account_number) 
     
 stages:
-    - stage: BuildAndPushImage
+    - stage: Build
       jobs:
-          - job: Build&Push
+          - job: BuildAndPushImage
             pool: Azure Pipelines
             steps:
                             
