--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -24,7 +24,7 @@ stages:
                     echo "GIT_COMMIT: ${GIT_COMMIT}"
                     echo "##vso[task.setvariable variable=GIT_COMMIT]${GIT_COMMIT}"
 
-            - script: docker build -f  infra/Docker/CurrencyFetcher.Dockerfile -t $(REGISTRY_NAME)/$(REPOSITORY_NAME):$(GIT_COMMIT) .
+            - script: docker build -f  infra/Docker/CurrencyFetcher.Dockerfile -t $(ACCOUNT_NUMBER)/$(REPOSITORY_NAME):$(GIT_COMMIT) .
               displayName: BuildImage
               
             - task: Docker@2
