--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -29,7 +29,7 @@ stages:
               
             - task: Docker@2
               inputs:
-                containerRegistry: '$(REGISTRY_NAME)'
+                containerRegistry: '$(ACCOUNT_NUMBER)'
                 repository: '$(ACCOUNT_NUMBER)/$(REPOSITORY_NAME:)'
                 command: 'push'
                 tags: '$(GIT_COMMIT)'
