--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -14,29 +14,37 @@ stages:
           - job: BuildAndPushImage
             pool: Azure Pipelines
             steps:
-                            
             - task: Bash@3
               displayName: CreatingTag
               inputs:
                 targetType: 'inline'
                 script: |
-                    GIT_COMMIT=$(git rev-parse --short HEAD)
-                    echo "GIT_COMMIT: ${GIT_COMMIT}"
-                    echo "##vso[task.setvariable variable=GIT_COMMIT]${GIT_COMMIT}"
+                    echo current is $PWD
+                    echo file are $LS
 
-            - script: docker build -f  infra/Docker/CurrencyFetcher.Dockerfile -t $(ACCOUNT_NUMBER)/$(REPOSITORY_NAME):$(GIT_COMMIT) .
-              displayName: BuildImage
+                            
+          #   - task: Bash@3
+          #     displayName: CreatingTag
+          #     inputs:
+          #       targetType: 'inline'
+          #       script: |
+          #           GIT_COMMIT=$(git rev-parse --short HEAD)
+          #           echo "GIT_COMMIT: ${GIT_COMMIT}"
+          #           echo "##vso[task.setvariable variable=GIT_COMMIT]${GIT_COMMIT}"
+
+          #   - script: docker build -f  infra/Docker/CurrencyFetcher.Dockerfile -t $(ACCOUNT_NUMBER)/$(REPOSITORY_NAME):$(GIT_COMMIT) .
+          #     displayName: BuildImage
               
-            - task: Docker@2
-              inputs:
-                containerRegistry: '$(ACCOUNT_NUMBER)'
-                repository: '$(ACCOUNT_NUMBER)/$(REPOSITORY_NAME:)'
-                command: 'push'
-                tags: '$(GIT_COMMIT)'
+          #   - task: Docker@2
+          #     inputs:
+          #       containerRegistry: '$(ACCOUNT_NUMBER)'
+          #       repository: '$(ACCOUNT_NUMBER)/$(REPOSITORY_NAME:)'
+          #       command: 'push'
+          #       tags: '$(GIT_COMMIT)'
 
           
           
-          - job: GitTea
-            pool: Docker
+          # - job: GitTea
+          #   pool: Docker
             
 
