--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -30,7 +30,7 @@ stages:
             - task: Docker@2
               inputs:
                 containerRegistry: '$(ACCOUNT_NUMBER)'
-                repository: '$(ACCOUNT_NUMBER)/$(REPOSITORY_NAME:)'
+                repository: '$(ACCOUNT_NUMBER)/$(REPOSITORY_NAME)'
                 command: 'push'
                 tags: '$(GIT_COMMIT)'
 
