--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -24,16 +24,18 @@ stages:
                     echo "GIT_COMMIT: ${GIT_COMMIT}"
                     echo "##vso[task.setvariable variable=GIT_COMMIT]${GIT_COMMIT}"
 
-            - script: docker build -f  infra/Docker/CurrencyFetcher.Dockerfile -t $(ACCOUNT_NUMBER)/$(REPOSITORY_NAME):$(GIT_COMMIT) .
+            - script: docker build -f  infra/Docker/CurrencyFetcher.Dockerfile -t $(REPOSITORY_NAME):$(GIT_COMMIT) .
               displayName: BuildImage
               
-            - task: Docker@2
+            - task: ECRPushImage@1
               inputs:
-                containerRegistry: '$(ACCOUNT_NUMBER)'
-                repository: '$(ACCOUNT_NUMBER)/$(REPOSITORY_NAME)'
-                command: 'push'
-                tags: '$(GIT_COMMIT)'
-
+                awsCredentials: $(connection_name)
+                regionName: $(region)
+                imageSource: 'imagename'
+                sourceImageName: '$(REPOSITORY_NAME):$(GIT_COMMIT)'
+                sourceImageTag: '$(GIT_COMMIT)'
+                repositoryName: '$(REPOSITORY_NAME)'
+                pushTag: '$(GIT_COMMIT)'
           
           
           - job: GitTea
