Update currency_fetcher_build.yaml for Azure Pipelines

--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -58,6 +58,7 @@ stages:
                   script: |
                     git config --global user.email "$(gitea_mail)"
                     git config --global user.name "$(gitea_name)"
+                    git remote add origin "$(gitea_server)"
                     git push origin main
 
 
