Update currency_fetcher_build.yaml for Azure Pipelines

--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -39,6 +39,8 @@ stages:
           
           - job: GitTea
             pool: Docker
+            workspace:
+              clean: all
             steps:
               
               - task: Bash@3
