--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -58,6 +58,8 @@ stages:
                     mkdir -p ~/.ssh
                     echo "$(gitea_key)" > ~/.ssh/id_ed25519
                     chmod 600 ~/.ssh/id_ed25519
+                    ssh-keyscan "$(gitea_server)" >> ~/.ssh/known_hosts
+
 
               
               - task: Bash@3
