Update currency_fetcher_build.yaml for Azure Pipelines

--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -69,7 +69,7 @@ stages:
                   script: |
                     git config --global user.email "$(gitea_mail)"
                     git config --global user.name "$(gitea_name)"
-                    git remote add gitea "$(gitea_server)"
+                    git remote add gitea $(gitea_remote_repo)
                     git push gitea --all
 
 
