Update currency_fetcher_build.yaml for Azure Pipelines

--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -4,6 +4,14 @@ trigger:
     branches:
         include:
             - main
+          
+    paths:
+      include:
+        - currency_fetcher/*
+        - infra/AzureDevops/*
+        - infra/Docker/*
+        - infra/helm/CurrencyFetcher/*
+
 variables:
     REPOSITORY_NAME: currency_fetcher
 
