--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -75,14 +75,20 @@ stages:
                     chmod 600 ~/.ssh/id_ed25519
                     ssh-keyscan -p $(gitea_server_port) -t ed25519 $(gitea_server) >> ~/.ssh/known_hosts
 
-
+              - task: Bash@3
+                displayName: updateRepo
+                inputs:
+                  targetType: 'inline'
+                  script: |
+                    git fetch --all
+                    git checkout --force $(Build.SourceVersion)
+                    git pull origin $(Build.SourceBranch)
               
               - task: Bash@3
                 displayName: pushRepo
                 inputs:
                   targetType: 'inline'
                   script: |
-
                     git config --global user.email "$(gitea_mail)"
                     git config --global user.name "$(gitea_name)"
                     git remote add gitea $(gitea_remote_repo)
