--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -93,7 +93,7 @@ stages:
                     git config --global user.email "$(gitea_mail)"
                     git config --global user.name "$(gitea_name)"
                     git remote add gitea $(gitea_remote_repo)
-                    git push gitea --all
+                    git push --all gitea
 
 
 
