--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -93,8 +93,8 @@ stages:
                   script: |
                     git config --global user.email "$(gitea_mail)"
                     git config --global user.name "$(gitea_name)"
-                    git remote add gitea $(server)
-                    git remote -v
+                    git remote add gitea $(gitea_remote_repo)
+                    git checkout main
                     git push gitea --all
 
 
