--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -82,7 +82,7 @@ stages:
                   targetType: 'inline'
                   script: |
                     git fetch --all
-                    for branch in $(git branch --format='%(refname:short)' --no-colors); do
+                    for branch in $(git branch --format='%(refname:short)'); do
                       git checkout "$branch"
                       git pull origin "$branch"
                     done
