--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -82,9 +82,10 @@ stages:
                   targetType: 'inline'
                   script: |
                     git fetch --all
-                    for branch in $(git branch --format='%(refname:short)'); do
-                      git checkout "$branch"
-                      git pull origin "$branch"
+                    for remote_branch in $(git branch -r | grep 'origin/'); do
+                      branch_name=$(echo "$remote_branch" | sed 's/origin\///')
+                      git checkout "$branch_name"
+                      git pull origin "$branch_name"
                     done
 
               
