--- a/infra/AzureDevops/currency_fetcher_build.yaml
+++ b/infra/AzureDevops/currency_fetcher_build.yaml
@@ -81,7 +81,7 @@ stages:
                 inputs:
                   targetType: 'inline'
                   script: |
-                    
+                    git fetch --unshallow || git fetch --all
                     for remote_branch in $(git branch -r | grep 'origin/'); do
                       branch_name=$(echo "$remote_branch" | sed 's/origin\///')
                       git checkout "$branch_name"
